--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -282,7 +282,7 @@
               <div class="contact-details">
                   <div class="detail-item">
                       <i data-lucide="mail"></i>
-                      <span>support@unit-markz.blog</span>
+                      <span>hello@unit-markz.blog</span>
                   </div>
                   <div class="detail-item">
                       <i data-lucide="phone"></i>
