--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,36 +2,31 @@
   <div class="container">
       <div class="footer__grid">
           <div class="footer__col">
-              <a href="/" class="footer__logo">Unit<span class="text-accent">Markz</span>.</a>
+              <a href="./#hero" class="footer__logo">Unit<span class="text-accent">Markz</span>.</a>
               <p class="footer__desc">
                   Платформа года для тех, кто хочет переосмыслить подход к развитию. Инновационная технология доступна каждому.
               </p>
-              <div class="footer__socials">
-                  <a href="#" class="social-link"><i data-lucide="instagram"></i></a>
-                  <a href="#" class="social-link"><i data-lucide="twitter"></i></a>
-                  <a href="#" class="social-link"><i data-lucide="linkedin"></i></a>
-              </div>
           </div>
 
           <div class="footer__col">
               <h3 class="footer__title">Навигация</h3>
               <ul class="footer__list">
-                  <li><a href="#about">О платформе</a></li>
-                  <li><a href="#education">Обучение</a></li>
-                  <li><a href="#blog">Блог экспертов</a></li>
-                  <li><a href="#reviews">Истории успеха</a></li>
+                  <li><a href="./#about">О платформе</a></li>
+                  <li><a href="./#education">Обучение</a></li>
+                  <li><a href="./#blog">Блог экспертов</a></li>
+                  <li><a href="./#reviews">Истории успеха</a></li>
               </ul>
           </div>
 
           <div class="footer__col">
               <h3 class="footer__title">Юридическая информация</h3>
               <ul class="footer__list">
-                  <li><a href="privacy.html">Политика конфиденциальности</a></li>
-                  <li><a href="cookies.html">Cookie политика</a></li>
-                  <li><a href="terms.html">Условия использования</a></li>
-                  <li><a href="return.html">Политика возврата</a></li>
-                  <li><a href="disclaimer.html">Отказ от ответственности</a></li>
-                  <li><a href="personal-data-policy.html">Обработка персональных данных</a></li>
+                  <li><a href="./privacy.html">Политика конфиденциальности</a></li>
+                  <li><a href="./cookies.html">Cookie политика</a></li>
+                  <li><a href="./terms.html">Условия использования</a></li>
+                  <li><a href="./return.html">Политика возврата</a></li>
+                  <li><a href="./disclaimer.html">Отказ от ответственности</a></li>
+                  <li><a href="./personal-data-policy.html">Обработка персональных данных</a></li>
               </ul>
           </div>
 
