--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,24 +1,24 @@
 <header class="header" id="header">
   <div class="container header__container">
-      <a href="/" class="header__logo">
+      <a href="./#hero" class="header__logo">
           Unit<span class="text-accent">Markz</span>.
       </a>
 
       <nav class="header__nav">
           <ul class="header__menu">
-              <li class="header__item"><a href="#hero" class="header__link">Главная</a></li>
-              <li class="header__item"><a href="#about" class="header__link">О платформе</a></li>
-              <li class="header__item"><a href="#innovations" class="header__link">Технологии</a></li>
-              <li class="header__item"><a href="#education" class="header__link">Обучение</a></li>
-              <li class="header__item"><a href="#benefits" class="header__link">Преимущества</a></li>
-              <li class="header__item"><a href="#blog" class="header__link">Блог</a></li>
-              <li class="header__item"><a href="#reviews" class="header__link">Отзывы</a></li>
-              <li class="header__item"><a href="#faq" class="header__link">FAQ</a></li>
+              <li class="header__item"><a href="./#hero" class="header__link">Главная</a></li>
+              <li class="header__item"><a href="./#about" class="header__link">О платформе</a></li>
+              <li class="header__item"><a href="./#innovations" class="header__link">Технологии</a></li>
+              <li class="header__item"><a href="./#education" class="header__link">Обучение</a></li>
+              <li class="header__item"><a href="./#benefits" class="header__link">Преимущества</a></li>
+              <li class="header__item"><a href="./#blog" class="header__link">Блог</a></li>
+              <li class="header__item"><a href="./#reviews" class="header__link">Отзывы</a></li>
+              <li class="header__item"><a href="./#faq" class="header__link">FAQ</a></li>
           </ul>
       </nav>
 
       <div class="header__actions">
-          <a href="#contact" class="btn btn--small header__btn">Написать нам</a>
+          <a href="./#contact" class="btn btn--small header__btn">Написать нам</a>
           <button class="header__burger" aria-label="Открыть меню">
               <span class="burger-line"></span>
               <span class="burger-line"></span>
